rns-lang/tests/snapshots/lexer-strings-unterminated_empty_string.snap
---
source: jasm/tests/integration_test.rs
assertion_line: 80
expression: "&combined"
---
----- INPUT  -----
.class public Test
"
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/strings/unterminated_empty_string.ja:2:1 ]
   │
 2 │ "
   │ ┬  
   │ ╰── String started here is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
